# crosstab

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  zensical.toml
.github/workflows/: ci-cd.yaml  ci-cd.yml
crosstab/: _version.py  crosstab.py
docs/: change_log.md  crosstab.md  index.md
docs/about/: change_log.md
scripts/: cli-example.sh  docker-example.sh
src/crosstab/: __init__.py  cli.py  crosstab.py
tests/: test_crosstab.py
tests/data/: sample0.csv  sample1.csv  sample2.csv  sample3.csv
