[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosstab"
version = "0.2.1"
authors = [{ name = "Caleb Grant", email = "grantcaleb22@gmail.com" }]
description = "Rearrange data from a normalized CSV format to a crosstabulated format, with styling."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "duckdb>=1.0",
    "rich>=13.0",
    "rich-click>=1.7",
    "xlsxwriter>=3.2",
]
keywords = [
    "crosstab",
    "xtab",
    "crosstabulate",
    "crosstabulation",
    "pivot",
    "pivot table",
    "pivot-table",
    "table",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "bump-my-version>=1.2.7",
    "mkdocstrings-python>=2.0.3",
    "openpyxl>=3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15",
    "tox-uv>=1.13.1",
    "twine>=6.1.0",
    "zensical>=0.0.28",
]

[project.scripts]
crosstab = "crosstab.cli:app"

[project.urls]
Homepage = "https://crosstab.readthedocs.io"
Repository = "https://github.com/geocoug/crosstab"
Issues = "https://github.com/geocoug/crosstab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crosstab"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle[error]
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PLE", # pylint errors
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle[warning]
]
ignore = [
    "S101",  # assert used — acceptable in tests
]

[tool.ruff.lint.per-file-ignores]
# Re-exports for public API
"src/crosstab/__init__.py" = ["F401"]
# Identifiers in the engine are quoted via _quote_ident() before being
# interpolated into PIVOT/SELECT statements; literal data values flow
# through DuckDB parameter binding. S608 fires on every f-string SQL it
# sees, so we suppress at the module level rather than peppering inline.
"src/crosstab/crosstab.py" = ["S608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpversion]
current_version = "0.2.1"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

______________________________________________________________________

## [{new_version}] - {now:%Y-%m-%d}"""

# Update the Unreleased link to compare from the new tag, and insert a
# link reference for the new version so the heading resolves.
[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[unreleased]: https://github.com/geocoug/crosstab/compare/v{current_version}...HEAD"
replace = """[unreleased]: https://github.com/geocoug/crosstab/compare/v{new_version}...HEAD
[{new_version}]: https://github.com/geocoug/crosstab/releases/tag/v{new_version}"""

[tool.pytest.ini_options]
addopts = [
    "--cov=crosstab",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "-ra",
    # Skip benchmarks by default — they're heavy (~7s each) and don't add
    # signal to the regular test run. Enable explicitly with
    # `pytest --benchmark-only` or `pytest --benchmark-enable`.
    "--benchmark-skip",
]
testpaths = ["tests"]
log_cli = true

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.tox]
required = ["tox-uv"]
env_list = ["py310", "py311", "py312", "py313", "py314", "build"]
skip_missing_interpreters = true
isolated_build = true

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
extras = ["dev"]
commands = [["pytest", "{posargs}"]]
# Pass through user/login env vars so getpass.getuser() works on Windows
# (tox strips the environment by default; without these it falls through
# to `import pwd`, which does not exist on Windows).
passenv = ["USERNAME", "USER", "LOGNAME", "LNAME", "USERPROFILE", "HOMEDRIVE", "HOMEPATH"]

[tool.tox.env.build]
description = "Build distribution packages"
allowlist_externals = ["pytest"]
commands = [["uv", "build"]]
